Initial commit - Angular frontend setup

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Environment files
+src/environments/environment*.ts    
+
+# Logs
+npm-debug.log
+yarn-error.log
