Add SPA routing fix for Render

--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
               "src/favicon.ico",
               "src/assets",
               "src/package.json",
+              "src/_redirects",
               "src/electron.prod.js"
             ],
             "styles": [
