--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,3 +1,3 @@
 {
-  "BASIC_URL": "https://billing-and-stock-management-app-backend.onrender.com"
+  "BASIC_URL": "https://billing-and-stock-management-app-backend.onrender.com/"
 }
