--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "@angular/compiler-cli": "^16.1.0",
     "@angular/localize": "^16.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/xlsx": "^0.0.35",
     "cross-var": "^1.1.0",
     "electron": "^26.3.0",
     "electron-packager": "^17.1.2",
