--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "jwt-decode": "^3.1.2",
+    "ngx-image-cropper": "^8.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
