--- a/src/package.json
+++ b/src/package.json
@@ -4,5 +4,8 @@
     "version": "1.0.0",
     "description": "Angular CLI + Electron",
     "main": "electron.prod.js",
-    "license": "MIT"
+    "license": "MIT",
+    "scripts": {
+        "build": "ng build && node scripts/inject-env.js"
+    }
 }
