Move backend URL to runtime config via env injection(minor fix v1.06)

--- a/src/package.json
+++ b/src/package.json
@@ -6,6 +6,8 @@
     "main": "electron.prod.js",
     "license": "MIT",
     "scripts": {
-        "build": "ng build && node scripts/inject-env.js"
+        "build": "ng build && node scripts/inject-env.js",
+        "test": "ng test",
+        "lint": "ng lint"
     }
 }
